[gd_scene load_steps=10 format=3 uid="uid://bwxrhcby3fb83"]

[ext_resource type="PackedScene" uid="uid://b1bjgpxmfx8kp" path="res://characters/Player.tscn" id="1_6boc0"]
[ext_resource type="Script" path="res://levels/Game.gd" id="1_httbb"]
[ext_resource type="PackedScene" uid="uid://fjf4p4x84qg2" path="res://environment/trees/pine_tree.tscn" id="2_tmq84"]
[ext_resource type="PackedScene" uid="uid://qjn61431rx55" path="res://environment/rocks/brown-rock.tscn" id="4_12r74"]

[sub_resource type="Curve2D" id="Curve2D_cwgn1"]
_data = {
"points": PackedVector2Array(-600, 0, 750, 0, 0, -1100, 0, -750, 0, 750, 1300, 0, 750, 0, -750, 0, 0, 1100, 0, 750, 0, -750, -1300, 0, -750, 0, 0, 0, 0, -1100)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_jnvn4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -2000, -1500, 0, 0, 0, 0, 2000, -1500)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_s5on0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1500, -2000, 0, 0, 0, 0, 1500, 2000)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_re1t5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1500, -2000, 0, 0, 0, 0, -1500, 2000)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_ki8ka"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -2000, 1500, 0, 0, 0, 0, 2000, 1500)
}
point_count = 2

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_httbb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.258824, 0.639216, 0.25098, 1)
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("1_6boc0")]
position = Vector2(948, 508)

[node name="SpawnPaths" type="Node2D" parent="Player"]

[node name="SpawnCircle" type="Path2D" parent="Player/SpawnPaths"]
curve = SubResource("Curve2D_cwgn1")

[node name="SpawnCircleFollow" type="PathFollow2D" parent="Player/SpawnPaths/SpawnCircle"]
unique_name_in_owner = true
position = Vector2(0, -1100)

[node name="SpawnAbove" type="Path2D" parent="Player/SpawnPaths"]
curve = SubResource("Curve2D_jnvn4")

[node name="SpawnAboveFollow" type="PathFollow2D" parent="Player/SpawnPaths/SpawnAbove"]
unique_name_in_owner = true
position = Vector2(-2000, -1500)

[node name="SpawnRight" type="Path2D" parent="Player/SpawnPaths"]
curve = SubResource("Curve2D_s5on0")

[node name="SpawnRightFollow" type="PathFollow2D" parent="Player/SpawnPaths/SpawnRight"]
unique_name_in_owner = true
position = Vector2(1500, -2000)
rotation = 1.5708

[node name="SpawnLeft" type="Path2D" parent="Player/SpawnPaths"]
curve = SubResource("Curve2D_re1t5")

[node name="SpawnLeftFollow" type="PathFollow2D" parent="Player/SpawnPaths/SpawnLeft"]
unique_name_in_owner = true
position = Vector2(-1500, -2000)
rotation = 1.5708

[node name="SpawnBelow" type="Path2D" parent="Player/SpawnPaths"]
curve = SubResource("Curve2D_ki8ka")

[node name="SpawnBelowFollow" type="PathFollow2D" parent="Player/SpawnPaths/SpawnBelow"]
unique_name_in_owner = true
position = Vector2(-2000, 1500)

[node name="Stopwatch" type="Timer" parent="."]
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="mapobjects" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Rock" parent="mapobjects" instance=ExtResource("4_12r74")]
position = Vector2(-107, 956)

[node name="Rock2" parent="mapobjects" instance=ExtResource("4_12r74")]
position = Vector2(-107, 897)

[node name="Rock3" parent="mapobjects" instance=ExtResource("4_12r74")]
position = Vector2(-107, 852)

[node name="CornerTrees" type="Node2D" parent="mapobjects"]
y_sort_enabled = true

[node name="Tree2" parent="mapobjects/CornerTrees" instance=ExtResource("2_tmq84")]
position = Vector2(-1920, -1080)

[node name="Tree16" parent="mapobjects/CornerTrees" instance=ExtResource("2_tmq84")]
position = Vector2(-1877, -1058)

[node name="Tree12" parent="mapobjects/CornerTrees" instance=ExtResource("2_tmq84")]
position = Vector2(3840, -1080)

[node name="Tree17" parent="mapobjects/CornerTrees" instance=ExtResource("2_tmq84")]
position = Vector2(3799, -1064)

[node name="Tree13" parent="mapobjects/CornerTrees" instance=ExtResource("2_tmq84")]
position = Vector2(-1920, 2160)

[node name="Tree19" parent="mapobjects/CornerTrees" instance=ExtResource("2_tmq84")]
position = Vector2(-1869, 2138)

[node name="Tree14" parent="mapobjects/CornerTrees" instance=ExtResource("2_tmq84")]
position = Vector2(3840, 2160)

[node name="Tree18" parent="mapobjects/CornerTrees" instance=ExtResource("2_tmq84")]
position = Vector2(3789, 2135)

[node name="TopObjects" type="Node2D" parent="mapobjects"]
y_sort_enabled = true
position = Vector2(0, -1080)

[node name="Tree" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(351, 750)

[node name="Tree3" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(338, 299)

[node name="Tree4" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(588, 237)

[node name="Tree5" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(617, 465)

[node name="Tree7" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1000, 299)

[node name="Tree8" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1200, 422)

[node name="Tree6" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(907, 791)

[node name="Tree9" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1687, 163)

[node name="Tree10" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1611, 698)

[node name="Tree11" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1300, 953)

[node name="Tree15" parent="mapobjects/TopObjects" instance=ExtResource("2_tmq84")]
position = Vector2(291, 266)

[node name="MiddleObjects" type="Node2D" parent="mapobjects"]
y_sort_enabled = true

[node name="Tree" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(351, 750)

[node name="Tree3" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(338, 299)

[node name="Tree4" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(588, 237)

[node name="Tree5" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(617, 465)

[node name="Tree7" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1000, 299)

[node name="Tree8" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1200, 422)

[node name="Tree6" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(907, 791)

[node name="Tree9" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1687, 163)

[node name="Tree10" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1611, 698)

[node name="Tree11" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1300, 953)

[node name="Tree15" parent="mapobjects/MiddleObjects" instance=ExtResource("2_tmq84")]
position = Vector2(291, 266)

[node name="BottomObjects" type="Node2D" parent="mapobjects"]
y_sort_enabled = true
position = Vector2(0, 1080)

[node name="Tree" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(351, 750)

[node name="Tree3" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(338, 299)

[node name="Tree4" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(588, 237)

[node name="Tree5" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(617, 465)

[node name="Tree7" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1000, 299)

[node name="Tree8" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1200, 422)

[node name="Tree6" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(907, 791)

[node name="Tree9" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1687, 163)

[node name="Tree10" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1611, 698)

[node name="Tree11" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(1300, 953)

[node name="Tree15" parent="mapobjects/BottomObjects" instance=ExtResource("2_tmq84")]
position = Vector2(291, 266)

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Stopwatch" to="." method="_on_stopwatch_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer"]
